# rotulin

./: .gitignore  AUTHORS  CMakeLists.txt  LICENSE  README  configure.bat  configure.sh
cache/: .gitignore  cache.rb
configurations/: cs_loader.json  global.json
frontend/: frontend.py  manage.py  metacall.py.in
frontend/frontend/: settings.py  urls.py
frontend/frontend/uploader/: admin.py  forms.py  models.py  urls.py  views.py
frontend/frontend/uploader/migrations/: 0001_initial.py
frontend/frontend/uploader/templates/: list.html
frontend/web/: settings.py
host/: CMakeLists.txt  main.cpp  rotulin.cpp  rotulin.h
image/: .gitignore  ImageMaker.cs  Main.cs  image.xproj  nuget.config  project.json
